fix: spacing between elements

--- a/src/app/components/home/banner/banner.component.scss
+++ b/src/app/components/home/banner/banner.component.scss
@@ -9,6 +9,11 @@
     }
     h2{
         font-size: 52px;
+        margin-bottom: 16px;
+    }
+    h3{
+        font-size: 24px;
+        margin-bottom: 20px;
     }
     p{
         font-family: $regular-font;
